@@ -133,8 +133,8 @@ static void* forces(tdata_t*);
 #ifdef PTHREAD_FORCES
 
 static void* forces_worker(tdata_t*);
-static int get_terminate_status(pthread_mutex_t *mutex, bool *pterm, bool *pval, int id);
-static int set_terminate_status(pthread_mutex_t *mutex, bool *pterm, bool val);
+static int get_terminate_status(pthread_mutex_t*, bool*, bool*, int);
+static int set_terminate_status(pthread_mutex_t*, bool*, bool);
 
 #endif
 
@@ -152,9 +152,11 @@ static int ensure_alloc(int n1, int n2, particle_t **pp, int *na)
 {
   particle_t *p;
 
-  if (n1+n2 <= *na) return 0;
+  if (n1+n2 <= *na)
+    return 0;
 
-  if ((p = realloc(*pp, (n1+n2)*sizeof(particle_t))) == NULL) return 1;
+  if ((p = realloc(*pp, (n1+n2)*sizeof(particle_t))) == NULL)
+    return 1;
 
   *pp = p;
   *na = n1+n2;
@@ -265,7 +267,7 @@ static double sinspline(double t, double t0, double z0, double t1, double z1)
 
 #define BOUNDARY_CHARGE 2.5
 
-static void boundary_schedule(double t, schedule_t* s)
+static void boundary_schedule(double t, schedule_t *s)
 {
   s->mass   = 1.0;
   s->charge = BOUNDARY_CHARGE;
@@ -274,7 +276,7 @@ static void boundary_schedule(double t, schedule_t* s)
   s->dmax   = 0;
 }
 
-static void interior_schedule(double t, schedule_t* s)
+static void interior_schedule(double t, schedule_t *s)
 {
   s->mass   = 1.0;
   s->charge = sinspline(t,
@@ -291,7 +293,7 @@ static void interior_schedule(double t, schedule_t* s)
 			CLEAN_T1, CLEAN_DELMAX);
 }
 
-static void schedule(double t, schedule_t* sB, schedule_t* sI)
+static void schedule(double t, schedule_t *sB, schedule_t *sI)
 {
   boundary_schedule(t, sB);
   interior_schedule(t, sI);
@@ -319,7 +321,7 @@ static void pw_error(vector_t rAB, particle_t p1, particle_t p2)
   radius by mutiplied by a time dependant constant
 */
 
-static void set_mq(particle_t* p, double mC, double qC)
+static void set_mq(particle_t *p, double mC, double qC)
 {
   double r =
 #if 0
@@ -360,8 +362,8 @@ static double force(double d, double x, double x0)
 {
   double K = 1/(1-x0);
 
-  if (d<x) return K*(1-x);
-  if (d<1) return K*(1-d);
+  if (d < x) return K*(1-x);
+  if (d < 1) return K*(1-d);
   return 0;
 }
 
@@ -375,7 +377,7 @@ typedef struct {
 
 extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **pN)
 {
-  int i, err;
+  int err;
   vector_t zero = {0, 0};
 
   /* timestep */
@@ -470,7 +472,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
   /* transfer dim 0/1 arrows */
 
-  for (i=0 ; i<n1 ; i++)
+  for (int i = 0 ; i < n1 ; i++)
     {
       ellipse_t E;
 
@@ -542,12 +544,11 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
   double dx = w/(nx+2);
   double dy = h/(ny+2);
 
-  for (i=0 ; i<nx ; i++)
+  for (int i = 0 ; i < nx ; i++)
     {
       double x = x0 + (i+1.5)*dx;
-      int j;
 
-      for (j=0 ; j<ny ; j++)
+      for (int j = 0 ; j < ny ; j++)
         {
           double y = y0 + (j+1.5)*dy;
           vector_t v = {x, y};
@@ -584,7 +585,9 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
   /* initial neighbour mesh */
 
-  int nedge=0, *edge=NULL;
+  int
+    nedge = 0,
+    *edge = NULL;
 
   if ((err = neighbours(p, n1, n2, &edge, &nedge)) != ERROR_OK)
     {
@@ -592,7 +595,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
       return err;
     }
 
-  if (nedge<2)
+  if (nedge < 2)
     {
       fprintf(stderr, "only %i edges\n", nedge);
       return ERROR_NODATA;
@@ -653,9 +656,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
     }
   else
     {
-      int k;
-
-      for (k=0 ; k<2 ; k++)
+      for (int k = 0 ; k < 2 ; k++)
 	{
 	  if ((err = pthread_barrier_init(tshared.barrier + k, &battr, nt+1)) != 0)
 	    {
@@ -698,9 +699,8 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
     }
 
   pthread_t thread[nt];
-  int k;
 
-  for (k=0 ; k<nt ; k++)
+  for (int k = 0 ; k<nt ; k++)
     {
       tdata[k].id = k;
       tdata[k].shared = &tshared;
@@ -741,8 +741,11 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
   /* set the initial physics */
 
-  for (i=0  ; i<n1    ; i++) set_mq(p+i, schedB.mass, schedB.charge);
-  for (i=n1 ; i<n1+n2 ; i++) set_mq(p+i, schedI.mass, schedI.charge);
+  for (int i = 0 ; i < n1 ; i++)
+    set_mq(p+i, schedB.mass, schedB.charge);
+
+  for (int i = n1 ; i < n1+n2 ; i++)
+    set_mq(p+i, schedI.mass, schedI.charge);
 
   /* particle cycle */
 
@@ -758,25 +761,22 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
     }
 
   iterations_t iter = opt->v.place.adaptive.iter;
-
   wait_t wait;
 
-  wait.drop  = opt->v.place.adaptive.kedrop;
-  wait.iter  = iter.main * DETRUNC_T1;
-  wait.kedB  = 0.0;
-  wait.done  = ! (wait.drop > 0);
+  wait.drop = opt->v.place.adaptive.kedrop;
+  wait.iter = iter.main * DETRUNC_T1;
+  wait.kedB = 0.0;
+  wait.done = ! (wait.drop > 0);
 
-  for (i=0 ; (i<iter.main) || (!wait.done) ; i++)
+  for (int i = 0 ; (i < iter.main) || (!wait.done) ; i++)
     {
-      int j;
-
       if (hist_st)
 	{
 	  unsigned int hist[HIST_BINS] = {0};
 
 	  /* pw distance histogram */
 
-	  for (j=0 ; j<nedge ; j++)
+	  for (int j = 0 ; j < nedge ; j++)
 	    {
 	      int id[2] = {edge[2*j], edge[2*j+1]};
 
@@ -795,7 +795,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 	      if (bid < HIST_BINS) hist[bid]++;
 	    }
 
-	  for (j=0 ; j<HIST_BINS ; j++)
+	  for (int j=0 ; j<HIST_BINS ; j++)
 	    fprintf(hist_st, "%i %.*f %u\n", i,
 		    HIST_DP, j*HIST_BINWIDTH, hist[j]);
 	}
@@ -817,16 +817,17 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
       if (minpw_st)
 	{
-	  for (j=n1 ; j<n1+n2 ; j++) p[j].minpw = INFINITY;
+	  for (int j = n1 ; j < n1+n2 ; j++)
+	    p[j].minpw = INFINITY;
 
-	  for (j=0 ; j<nedge ; j++)
+	  for (int j = 0 ; j < nedge ; j++)
 	    {
 	      int id[2] = {edge[2*j], edge[2*j+1]};
 
 	      vector_t rAB = vsub(p[id[1]].v, p[id[0]].v);
 	      double x = contact_mt(rAB, p[id[0]].M, p[id[1]].M);
 
-	      if (x<0)
+	      if (x < 0)
 		{
 		  pw_error(rAB, p[id[0]], p[id[1]]);
 		  continue;
@@ -838,7 +839,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 	      p[id[1]].minpw = MIN(p[id[1]].minpw, d);
 	    }
 
-	  for (j=n1 ; j<n1+n2 ; j++)
+	  for (int j = n1 ; j < n1+n2 ; j++)
 	    fprintf(minpw_st, "%f %f\n", p[j].minor*p[j].major, p[j].minpw);
 
 	  fclose(minpw_st);
@@ -851,13 +852,11 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 	 over which the neighbours network is valid.
       */
 
-      double T=0;
+      double T = 0;
       int nesc = 0;
 
-      for (j=0 ; j<iter.euler ; j++)
+      for (int j = 0 ; j < iter.euler ; j++)
 	{
-	  int k;
-
 	  T = ((double)(i*iter.euler + j))/((double)(iter.euler*iter.main));
 
 	  schedule(T, &schedB, &schedI);
@@ -885,7 +884,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
 	      *nA = n1 + n2;
 
-	      for (k=n1 ; k<n1+n2 ; k++)
+	      for (int k = n1 ; k < n1+n2 ; k++)
 		{
 		  (*pA)[k].centre = p[k].v;
 		  evaluate((*pA)+k);
@@ -907,7 +906,8 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
 	  /* reset forces */
 
-	  for (k=n1 ; k<n1+n2 ; k++) p[k].F = zero;
+	  for (int k = n1 ; k < n1+n2 ; k++)
+	    p[k].F = zero;
 
 	  /* accumulate forces */
 
@@ -935,25 +935,25 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 	      vector_t F[nt*n2];
 	      flag_t flag[nt*n2];
 
-	      for (k=0 ; k<nt*n2 ; k++)
+	      for (int k = 0 ; k < nt*n2 ; k++)
 		{
 		  F[k] = zero;
 		  flag[k] = 0;
 		}
 
-	      tshared.edge  = edge;
-	      tshared.p     = p;
-	      tshared.rd    = schedI.rd;
-	      tshared.rt    = schedI.rt;
-	      tshared.n1    = n1;
-	      tshared.n2    = n2;
+	      tshared.edge = edge;
+	      tshared.p = p;
+	      tshared.rd = schedI.rd;
+	      tshared.rt = schedI.rt;
+	      tshared.n1 = n1;
+	      tshared.n2 = n2;
 
-	      for (k=0 ; k<nt ; k++)
+	      for (int k = 0 ; k < nt ; k++)
 		{
-		  tdata[k].off    = eoff[k];
-		  tdata[k].size   = esz[k];
-		  tdata[k].F      = F + k*n2;
-		  tdata[k].flag   = flag + k*n2;
+		  tdata[k].off = eoff[k];
+		  tdata[k].size = esz[k];
+		  tdata[k].F = F + k*n2;
+		  tdata[k].flag = flag + k*n2;
 		}
 
 #ifdef PTHREAD_FORCES
@@ -996,12 +996,11 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 	        into the particle array
 	      */
 
-	      for (k=0 ; k<n2 ; k++)
+	      for (int k = 0 ; k < n2 ; k++)
 		{
-		  int m;
 		  vector_t Fsum = zero;
 
-		  for (m=0 ; m<nt ; m++)
+		  for (int m = 0 ; m<nt ; m++)
 		    {
 		      Fsum = vadd(Fsum, F[k+n2*m]);
 
@@ -1018,7 +1017,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
 	      FILE* st = fopen(THREAD_DATA, "w");
 
-	      for (k=0 ; k<n2 ; k++)
+	      for (int k = 0 ; k < n2 ; k++)
 		{
 		  vector_t F = p[n1+k].F;
 
@@ -1045,7 +1044,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 	     our struct uses different conventions.
 	  */
 
-	  for (k=n1 ; k<n1+n2 ; k++)
+	  for (int k = n1 ; k < n1+n2 ; k++)
 	    {
 	      /*
 		 scale invariant viscosity - we originally
@@ -1063,7 +1062,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
               double   Cd = 14.5;
 	      vector_t F1 = smul(-Cd*p[k].mass, p[k].dv);
-              vector_t F  = vadd(p[k].F, F1);
+              vector_t F = vadd(p[k].F, F1);
 
 	      p[k].dv = vadd(p[k].dv, smul(dt/p[k].mass, F));
 	      p[k].v  = vadd(p[k].v, smul(dt, p[k].dv));
@@ -1071,8 +1070,11 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
 	  /* reset the physics */
 
-	  for (k=0  ; k<n1    ; k++) set_mq(p+k, schedB.mass, schedB.charge);
-	  for (k=n1 ; k<n1+n2 ; k++) set_mq(p+k, schedI.mass, schedI.charge);
+	  for (int k = 0 ; k < n1 ; k++)
+	    set_mq(p+k, schedB.mass, schedB.charge);
+
+	  for (int k = n1 ; k < n1+n2 ; k++)
+	    set_mq(p+k, schedI.mass, schedI.charge);
 	}
 
       /* back in the main iteration */
@@ -1094,13 +1096,13 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 	{
           pw_t pw[n2];
 
-          for (j=0 ; j<n2 ; j++)
+          for (int j = 0 ; j < n2 ; j++)
             {
               pw[j].d = INFINITY;
 	      pw[j].id = j+n1;
             }
 
-          for (j=0 ; j<nedge ; j++)
+          for (int j = 0 ; j < nedge ; j++)
             {
               int id[2] = {edge[2*j], edge[2*j+1]};
 
@@ -1123,15 +1125,13 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
               double d = sqrt(x);
 
-              int k;
-
 	      /*
 		only going to k=1 means the minimum is attached
 		to the smaller id - quick hack till we implement
 		the non-interesct subset check
 	      */
 
-              for (k=0 ; k<1 ; k++)
+              for (int k = 0 ; k < 1 ; k++)
                 {
 		  size_t idk = id[k] - n1;
 		  double d1 = pw[idk].d;
@@ -1142,11 +1142,11 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
 	  qsort(pw, n2, sizeof(pw_t), (int(*)(const void*, const void*))pwcomp);
 
-	  double r;
+	  double r = pw[0].d;
 
-          for (j=0, r=pw[0].d ;
-	       (r<schedI.rd) && (nocl<schedI.dmax) && (j<n2) ;
-	       r=pw[++j].d)
+          for (int j = 0 ;
+	       (r < schedI.rd) && (nocl < schedI.dmax) && (j < n2) ;
+	       r = pw[++j].d)
             {
 	      SET_FLAG(p[pw[j].id].flag, PARTICLE_STALE);
 	      nocl++;
@@ -1155,7 +1155,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
       /* re-evaluate */
 
-      for (j=n1 ; j<n1+n2 ; j++)
+      for (int j = n1 ; j < n1+n2 ; j++)
 	{
 	  if (GET_FLAG(p[j].flag, PARTICLE_STALE)) continue;
 
@@ -1180,7 +1180,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
       /* mark escapees */
 
-      for (j=n1 ; j<n1+n2 ; j++)
+      for (int j = n1 ; j < n1+n2 ; j++)
 	{
 	  if (GET_FLAG(p[j].flag, PARTICLE_STALE)) continue;
 
@@ -1225,7 +1225,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
       double ke = 0.0;
 
-      for (j=n1 ; j<n1+n2 ; j++)
+      for (int j = n1 ; j < n1+n2 ; j++)
 	{
 	  double v2 = vabs2(p[j].dv);
 	  ke += p[j].mass * v2;
@@ -1259,7 +1259,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
       double earea = 0.0;
 
-      for (j=0 ; j<n1+n2 ; j++)
+      for (int j = 0 ; j < n1+n2 ; j++)
 	earea += p[j].minor * p[j].major;
 
       earea *= M_PI;
@@ -1394,12 +1394,13 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
     {
       arrow_t* A = realloc(*pA, (n1+n2)*sizeof(arrow_t));
 
-      if (!A) return ERROR_MALLOC;
+      if (!A)
+	return ERROR_MALLOC;
 
       *pA = A;
     }
 
-  for (i=n1 ; i<n1+n2 ; i++)
+  for (int i = n1 ; i < n1+n2 ; i++)
     {
       (*pA)[i].centre = p[i].v;
       evaluate((*pA)+i);
@@ -1413,13 +1414,13 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
   /* harvest workers as they exit */
 
-  for (k=0 ; k<nt ; k++)
+  for (int k = 0 ; k < nt ; k++)
     {
       err = pthread_join(thread[k], NULL);
       if (err)
 	{
 	  fprintf(stderr, "error joining thread %i: %s\n",
-		  i, strerror(err));
+		  k, strerror(err));
 
 	  return ERROR_PTHREAD;
 	}
@@ -1427,7 +1428,7 @@ extern int dim2(dim2_opt_t *opt, size_t *nA, arrow_t **pA, size_t *nN, nbs_t **p
 
   /* destroy barriers */
 
-  for (k=0 ; k<2 ; k++)
+  for (int k = 0 ; k < 2 ; k++)
     {
       err = pthread_barrier_destroy( tshared.barrier + k );
       if (err)
@@ -1508,7 +1509,7 @@ static nbs_t* nbs_populate(int nedge, int* edge, int np, particle_t *p)
 
 typedef struct
 {
-  int    n[2];
+  int n[2];
   double d2;
 } edged_t;
 
@@ -1532,17 +1533,17 @@ static int ecmp(const int *e1, const int *e2)
 
 static int neighbours(particle_t* p, int n1, int n2, int **pe, int *pne)
 {
-  int i, np=n1+n2, id[np], e[2*np*KD_NBS_MAX], ne=0;
+  int np = n1+n2, id[np], e[2*np*KD_NBS_MAX], ne = 0;
   struct kdtree *kd = kd_create(2);
 
   *pe  = NULL;
   *pne = 0;
 
-  for (i=0 ; i<np ; i++) id[i] = i;
+  for (int i = 0 ; i < np ; i++) id[i] = i;
 
   if (!kd) return ERROR_BUG;
 
-  for (i=0 ; i<np ; i++)
+  for (int i = 0 ; i < np ; i++)
     {
       double
 	v[2] = {p[i].v.x, p[i].v.y};
@@ -1552,9 +1553,8 @@ static int neighbours(particle_t* p, int n1, int n2, int **pe, int *pne)
 
   struct {int nx, nn; } stat = {0, 0};
 
-  for (i=n1 ; i<np ; i++)
+  for (int i = n1 ; i < np ; i++)
     {
-      int j, n;
       double
 	v[2] = {p[i].v.x, p[i].v.y},
 	rng  = KD_RNG_INITIAL * p[i].major;
@@ -1563,11 +1563,12 @@ static int neighbours(particle_t* p, int n1, int n2, int **pe, int *pne)
       /* find neighbours */
 
       if (!(res = kd_nearest_range(kd, v, rng))) return ERROR_BUG;
-      n = kd_res_size(res);
+
+      int n = kd_res_size(res);
 
       /* expand search radius if required */
 
-      for (j=0 ; (j<KD_EXPAND_MAX) && (n<KD_NBS_MIN) ; j++)
+      for (int j = 0 ; (j < KD_EXPAND_MAX) && (n < KD_NBS_MIN) ; j++)
 	{
 	  kd_res_free(res);
 	  rng *= KD_EXPAND_FACTOR;
@@ -1582,7 +1583,7 @@ static int neighbours(particle_t* p, int n1, int n2, int **pe, int *pne)
 
       /* select nearest if too many */
 
-      if (n>0)
+      if (n > 0)
 	{
 	  /* dump results to temporary edge & distance array */
 
@@ -1591,9 +1592,10 @@ static int neighbours(particle_t* p, int n1, int n2, int **pe, int *pne)
 
 	  while (! kd_res_end(res))
 	    {
-	      int *nid = kd_res_item_data(res);
+	      int
+		*nid = kd_res_item_data(res),
+		j = *nid;
 
-	      j = *nid;
 	      kd_res_next(res);
 
 	      if (i == j) continue;
@@ -1617,9 +1619,7 @@ static int neighbours(particle_t* p, int n1, int n2, int **pe, int *pne)
 
 	  ned = MIN(ned, KD_NBS_MAX);
 
-	  int k;
-
-	  for (k=0 ; k<ned ; k++)
+	  for (int k = 0 ; k < ned ; k++)
 	    {
 	      e[2*(ne+k)]   = ed[k].n[0];
 	      e[2*(ne+k)+1] = ed[k].n[1];
@@ -1685,15 +1685,14 @@ static int subdivide(size_t nt, size_t ne, size_t* off, size_t* size)
   if ((nt<1) || (ne<1)) return 1;
 
   size_t m = ne/nt;
-  int i;
 
-  for (i=0 ; i<nt-1 ; i++)
+  for (int i = 0 ; i < nt-1 ; i++)
     {
-      off[i]  = i*m;
+      off[i] = i*m;
       size[i] = m;
     }
 
-  off[nt-1]  = (nt-1)*m;
+  off[nt-1] = (nt-1)*m;
   size[nt-1] = ne - (nt-1)*m;
 
   return 0;
@@ -1798,11 +1797,10 @@ static void* forces_worker(tdata_t* pt)
 
 static void* forces(tdata_t* pt)
 {
-  int i;
   tdata_t t = *pt;
   tshared_t s = *(t.shared);
 
-  for (i=0 ; i<t.size ; i++)
+  for (int i = 0 ; i < t.size ; i++)
     {
       int k = i+t.off;
       int idA = s.edge[2*k], idB = s.edge[2*k+1];
